--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <p>
       Aplikacja została zaprojektowana jako <strong>Progressive Web App (PWA)</strong>,
       dzięki czemu może zostać zainstalowana na urządzeniu mobilnym lub
-      komputerze i używana jak aplikacja natywna.
+      komputerze i używana jak aplikacja natywna. Aplikacja może działać bez dostępu do internetu.
       Aby ją zainstalować, wybierz opcję: „Dodaj do ekranu głównego” lub „Zainstaluj aplikację” w swojej przeglądarce.
     </p>
   </section>
