--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
 <div class="topbar">
   <h1>Respiro</h1>
   <button id="aboutBtn" class="secondary">O aplikacji</button>
-  <button id="themeBtn" class="secondary" aria-label="Zmień motyw">Motyw jasny</button>
+  <button
+    id="themeBtn"
+    class="secondary"
+    aria-label="Zmień motyw"
+  >
+    Motyw jasny
+  </button>
 </div>
 
 <div class="container">
@@ -26,15 +32,33 @@
   </section>
 
   <section id="view-details" class="view">
-    <button id="backBtn" class="secondary">Lista ćwiczeń</button>
+    <button id="backBtn" class="secondary">
+      Lista ćwiczeń
+    </button>
+
     <h2 id="detailsTitle"></h2>
     <p id="detailsDesc"></p>
     <div id="detailsParams" class="params"></div>
-    <button id="startBtn">Start</button>
+
+    <div class="presets">
+      <p>Długość sesji:</p>
+
+      <div class="preset-buttons">
+        <button data-preset="short">Krótka</button>
+        <button data-preset="medium" class="active">
+          Średnia
+        </button>
+        <button data-preset="long">Długa</button>
+      </div>
+
+      <button id="startBtn">Start</button>
+    </div>
   </section>
 
   <section id="view-session" class="view">
     <h2 id="sessionTitle"></h2>
+    <div class="controls"></div>
+    <button id="sessionBackBtn" class="secondary">Wstecz</button>      
 
     <div class="visual">
       <div id="circle" class="circle">
@@ -46,60 +70,80 @@
     <div class="controls">
       <button id="soundBtn" class="secondary">Dźwięk</button>
       <button id="wakeBtn" class="secondary">Blokada ekranu</button>
-      <button id="fsBtn" class="secondary">Pełny ekran</button>
+      <button id="fsBtn" class="secondary">Pełny ekran</button>  
       <button id="stopBtn">Zakończ</button>
     </div>
   </section>
 
   <section id="view-about" class="view">
-    <button id="aboutBackBtn" class="secondary">Lista ćwiczeń</button>
+    <button id="aboutBackBtn" class="secondary">
+      Lista ćwiczeń
+    </button>
 
     <h2>O aplikacji</h2>
 
     <p>
-      <strong>Respiro</strong> (łac. <em>oddychać</em>) to prosta aplikacja do ćwiczeń
-      oddechowych.
+      <strong>Respiro</strong> (łac. <em>oddychać</em>) to
+      prosta aplikacja do ćwiczeń oddechowych.
     </p>
 
     <p>
-      Regularne ćwiczenia oddechu mogą pomóc w redukcji stresu,
-      poprawie koncentracji oraz jakości snu.
+      Regularne ćwiczenia oddechu mogą pomóc
+      w redukcji stresu, poprawie koncentracji
+      oraz jakości snu.
     </p>
 
     <p>
-      Prezentowane ćwiczenia bazują na metodach opisywanych w literaturze
-      naukowej oraz wykorzystywanych w psychologii, medycynie i terapii
-      oddechowej.
+      Prezentowane ćwiczenia bazują na metodach
+      opisywanych w literaturze naukowej oraz
+      wykorzystywanych w psychologii, medycynie
+      i terapii oddechowej.
     </p>
 
     <p>
-      Aplikacja została zaprojektowana jako <strong>Progressive Web App (PWA)</strong>,
-      dzięki czemu może zostać zainstalowana na urządzeniu mobilnym lub
-      komputerze i używana jak aplikacja natywna. Aplikacja może działać bez dostępu do internetu.
-      Aby ją zainstalować, wybierz opcję: „Dodaj do ekranu głównego” lub „Zainstaluj aplikację” w swojej przeglądarce.
+      Aplikacja została zaprojektowana jako
+      <strong>Progressive Web App (PWA)</strong>,
+      dzięki czemu może zostać zainstalowana
+      na urządzeniu mobilnym lub komputerze
+      i używana jak aplikacja natywna.
+    </p> 
+
+    <p>Respiro może działać bez dostępu do internetu.
+      Aby zainstalować aplikację znajdź opcję "Zainstaluj" lub dodaj "Do ekranu głównego"
+      w swojej przeglądarce.  
     </p>
+
   </section>
+
 </div>
 
-<script type="module" src="src/app.js"></script>
+<script type="module" src="./src/app.js"></script>
 
 <!-- Rejestracja service worker -->
 <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
       navigator.serviceWorker
-        .register('/sw.js')
+        .register('./sw.js')
         .then(registration => {
-          console.log('Service Worker zarejestrowany:', registration.scope);
+          console.log(
+            'Service Worker zarejestrowany:',
+            registration.scope
+          );
         })
         .catch(error => {
-          console.error('Błąd rejestracji Service Workera:', error);
+          console.error(
+            'Błąd rejestracji Service Workera:',
+            error
+          );
         });
     });
   }
 </script>
 
-<div id="offlineBanner">Aplikacja jest w trybie offline</div>
+<div id="offlineBanner">
+  Aplikacja jest w trybie offline
+</div>
 
 </body>
 </html>
