--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Respiro</title>
-
   <!-- PWA -->
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#030717">
@@ -18,13 +17,7 @@
   <header class="topbar">
     <h1>Respiro</h1>
     <button id="aboutBtn" class="secondary">O aplikacji</button>
-    <button
-      id="themeBtn"
-      class="secondary"
-      aria-label="Zmień motyw"
-    >
-      Motyw jasny
-    </button>
+    <button id="themeBtn" class="secondary" aria-label="Zmień motyw">Motyw jasny</button>
   </header>
 
   <main class="container">
