--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <!-- O aplikacji -->
     <section id="view-about" class="view">
-      <button id="aboutBtn" class="secondary">"O aplikacji"</button>
+      <button id="aboutBackBtn" class="secondary">Lista ćwiczeń</button>
 
       <h2>O aplikacji</h2>
 
@@ -94,6 +94,10 @@
         opisywanych w&nbsp;literaturze naukowej oraz
         wykorzystywanych w&nbsp;psychologii medycynie
         i&nbsp;terapii oddechowej.
+      </p>
+
+      <p>
+        <strong>Podczas wykonywania ćwiczeń oddechowych zaleca się oddychanie przez nos.</strong>
       </p>
 
       <p>
