--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <button id="sessionBackBtn" class="secondary">Wstecz</button>
 
       <div class="visual">
-        <div id="circle" class="circle">
+        <div id="circle" class="circle breath-circle">
           <p id="timer"></p>
         </div>
 
